--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="https://www.linkedin.com/in/manishkumar2501/"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://www.manish25.mv@gmail.com"style="--i:8" target="_blank"><i class='bx bxl-gmail'></i></a>
                     <a href="https://github.com/VManish25"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.youtube.com/@Unlucky_Coder21"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://wa.me/8668101001"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                   
                 </div>
                 <a href="https://drive.google.com/file/d/18UQSFzY9kdABAWTxDMgy_uBmery6-2q_/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
