--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         </div>
 
                         <div class="row">
-                            <img src="./img/DA.png">
+                            <img src="product_app_img.jpg">
                            <div class="layer">
                                 <h5>Desktop Application</h5>
                                 <p>A windows application to manage the work of the staff’s in the company by using Python Tkinter and SQL.</p>
