--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <img src="product_app_img copy.jpg">
                            <div class="layer">
                                 <h5>Product Application</h5>
-                                <p>Detailed product listings with images, descriptions and prices.also providing users with a seamless shopping experience</p>
+                                <p>Detailed product listings providing users with a seamless shopping experience</p>
 
                                 <a href="#"><i class='bx bx-desktop' style="color: aliceblue;"></i></a>
                                 
