--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                             <img src="chatapplication.webp">
                             <div class="layer">
                                 <p> <h5>Chat Application</h5> Communicate in a web chat rooms.It enables you to send and receive messages.</p>
-
-                                <a href="#"><i class='bx bx-chat' style="color: aliceblue;"></i></a>
+                                <a href="https://friendly-belekoy-9b806d.netlify.app">
+                                    <i class='bx bx-chat' style="color: aliceblue;"></i></a>
 
                             </div>
                         </div>
@@ -203,9 +203,9 @@
                             <img src="product_app_img copy.jpg">
                            <div class="layer">
                                 <h5>Product Application</h5>
-                                <p>Detailed product listings providing users with a seamless shopping experience</p>
+                                <p><h5>Product Application</h5> Detailed product listings providing users with a seamless shopping experience.</p>
 
-                                <a href="#"><i class='bx bx-desktop' style="color: aliceblue;"></i></a>
+                                <a href="https://stately-vacherin-76de9b.netlify.app"><i class='bx bxl-shopify' style="color: aliceblue;"></i></a>
                                 
                             </div>
                         </div>
@@ -214,8 +214,8 @@
                             <img src="book-store.jpg">
                             <div class="layer">
                                 <p> <h5>BookStore App</h5> Reading enhances your critical thinking skills and creativity. </p>
-
-                                <a href="#"><i class='bx bxs-low-vision' style="color: aliceblue;"></i></a>
+                                <a href="https://beautiful-lamington-cf228b.netlify.app">
+                                <i class='bx bx-book-open' style="color: aliceblue;"></i></a>
                                 
                             </div>
                         </div>
