--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
                     <li><i class="bx bxs-phone-call" ></i>8668101001</li>
                 </div>
                 <div class="contact-icons">
-                    <a href="https://github.com/vsmidhun21" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.youtube.com/@Unlucky_Coder21"><i class='bx bxl-youtube'></i></a>
-                    <a href="https://instagram.com/midhun_021?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank"><i class="bx bxl-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/midhun-v-s" target="_blank"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/manishkumar2501/"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.manish25.mv@gmail.com"style="--i:8" target="_blank"><i class='bx bxl-gmail'></i></a>
+                    <a href="https://github.com/VManish25"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://wa.me/8668101001"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                 </div>
             </div>
             
