--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="https://wa.me/8668101001"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                   
                 </div>
-                <a href="https://drive.google.com/file/d/18UQSFzY9kdABAWTxDMgy_uBmery6-2q_/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1JWtglnS_meULavl9tgVUyhb-0wuNbgZc/view?usp=drive_link" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
@@ -70,7 +70,7 @@
                         integrate them into applications to enable seamless communication between the front end and back end.<br>
                         <br>
 
-                        <a href="https://drive.google.com/file/d/18UQSFzY9kdABAWTxDMgy_uBmery6-2q_/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1JWtglnS_meULavl9tgVUyhb-0wuNbgZc/view?usp=drive_link" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
