--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             <img src="chatapplication.webp">
                             <div class="layer">
                                 <p> <h5>Chat Application</h5> Communicate in a web chat rooms.It enables you to send and receive messages.</p>
-                                <a href="https://friendly-belekoy-9b806d.netlify.app">
+                                <a href="https://friendly-belekoy-9b806d.netlify.app" target="_blank">
                                     <i class='bx bx-chat' style="color: aliceblue;"></i></a>
 
                             </div>
@@ -202,7 +202,7 @@
                                 <h5>Product Application</h5>
                                 <p><h5>Product Application</h5> Detailed product listings providing users with a seamless shopping experience.</p>
 
-                                <a href="https://stately-vacherin-76de9b.netlify.app"><i class='bx bxl-shopify' style="color: aliceblue;"></i></a>
+                                <a href="https://stately-vacherin-76de9b.netlify.app" target="_blank"><i class='bx bxl-shopify' style="color: aliceblue;"></i></a>
                                 
                             </div>
                         </div>
@@ -211,8 +211,9 @@
                             <img src="book-store.jpg">
                             <div class="layer">
                                 <p> <h5>BookStore App</h5> Reading enhances your critical thinking skills and creativity. </p>
-                                <a href="https://beautiful-lamington-cf228b.netlify.app">
+                                <a href="https://beautiful-lamington-cf228b.netlify.app" target="_blank">
                                 <i class='bx bx-book-open' style="color: aliceblue;"></i></a>
+                                <a href="" target="_blank"><i class='bx bxl-github' style="color: aliceblue;"></i></a>
                                 
                             </div>
                         </div>
